test: make manual resume an unconditional override